--- a/WebApplicationCrud/Views/Shared/_ProductListing.cshtml
+++ b/WebApplicationCrud/Views/Shared/_ProductListing.cshtml
@@ -47,11 +47,31 @@
                         <h6>@prod.Name</h6>
 
                         <div class="rating">
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
+                            @if (prod.StarRate.HasValue)
+                            {
+                                @for (int i = 0; i < 5; i++)
+                                {
+                                    if (i < prod.StarRate)
+                                    {
+                                        <i class="fa fa-star"></i>
+
+                                    }
+                                    else
+                                    {
+                                        <i class="fa fa-star-o"></i>
+
+                                    }
+                                }
+                            }
+                            else
+                            { <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+                                <i class="fa fa-star-o"></i>
+
+                            }
+
                         </div>
 
                       
