--- a/WebApplicationCrud/Views/Panel/AddProductPanel.cshtml
+++ b/WebApplicationCrud/Views/Panel/AddProductPanel.cshtml
@@ -164,7 +164,7 @@
 
                                             @*<div v-on:drop="drop(this.event,index,indexx)" v-on:change="SelectFiles(index,indexx,this.event)" :key=Indexx>*@
 
-                                            <div v-on:drop="drop(this.event,Indexx,Index)"
+                                            <div v-on:drop="drop(this.event,Index,Indexx)"
                                                  v-on:change="SelectFiles(Index,Indexx,this.event)"
                                                  @@dragleave.prevent="toggleActive(Index,Indexx)"
                                                  @@dragover.prevent
