--- a/WebApplicationCrud/Views/Administration/ManageUserClaims.cshtml
+++ b/WebApplicationCrud/Views/Administration/ManageUserClaims.cshtml
@@ -26,10 +26,10 @@
                             <div asp-validation-summary="All" class="text-danger"></div>
                         </div>
                         <div class="card-footer">
-                            <input type="submit" value="Update" class="btn btn-primary"
+                            <input type="submit" value="Update" class="btn btn-dark"
                                    style="width:auto" />
                             <a asp-action="EditUser" asp-route-id="@Model.UserId"
-                               class="btn btn-primary" style="width:auto">Cancel</a>
+                               class="btn btn-danger" style="width:auto">Cancel</a>
                         </div>
                     </div>
                 </form>
