--- a/WebApplicationCrud/Views/Shared/_Layout.cshtml
+++ b/WebApplicationCrud/Views/Shared/_Layout.cshtml
@@ -27,7 +27,9 @@
 
 
 
-
+    <div id="preloder">
+        <div class="loader"></div>
+    </div>
 
     @*Offcanvas*@
     <div class="offcanvas-menu-overlay"></div>
@@ -36,27 +38,26 @@
             <div class="offcanvas__links">
                 <a asp-action="Login" asp-controller="Index">Sign In</a>
 
-                <a href="#">FAQs</a>
+                @*<a href="#">FAQs</a>*@
 
             </div>
-            <div class="offcanvas__top__hover">
-                <span>Usd <i class="arrow_carrot-down"></i></span>
-                <ul>
-                    <li>USD</li>
-                    <li>EUR</li>
-                    <li>USD</li>
-                </ul>
-            </div>
+            @*<div class="offcanvas__top__hover">
+                    <span>Usd <i class="arrow_carrot-down"></i></span>
+                    <ul>
+                        <li>USD</li>
+                        <li>EUR</li>
+                        <li>USD</li>
+                    </ul>
+                </div>*@
         </div>
-        <div class="offcanvas__nav__option">
-            <a href="#" class="search-switch"><img src="~/img/icon/search.png" alt=""></a>
-            <a href="#"><img src="~/img/icon/heart.png" alt=""></a>
+        @*<div class="offcanvas__nav__option">
+                <a href="#" class="search-switch"><img src="~/img/icon/search.png" alt=""></a>
+                <a href="#"><img src="~/img/icon/heart.png" alt=""></a>
 
-        </div>
+            </div>*@
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__text">
-            @*-----------------------------------------------------------------------*@
-            @*<p>Free shipping, 30-day return or refund guarantee.</p>*@
+
         </div>
     </div>
 
@@ -70,8 +71,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-7">
                         <div class="header__top__left">
-                            @*-------------------------------------------------------------*@
-                            @*<p>Free shipping, 30-day return or refund guarantee.</p>*@
+
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-5">
@@ -88,15 +88,15 @@
 
                                 }
 
-                                <a href="#">FAQs</a>
+                                @*<a href="#">FAQs</a>*@
                             </div>
                             <div class="header__top__hover">
-                                <span>Usd <i class="arrow_carrot-down"></i></span>
-                                <ul>
-                                    <li>USD</li>
-                                    <li>EUR</li>
-                                    <li>USD</li>
-                                </ul>
+                                @*<span>Usd <i class="arrow_carrot-down"></i></span>
+                                    <ul>
+                                        <li>USD</li>
+                                        <li>EUR</li>
+                                        <li>USD</li>
+                                    </ul>*@
                             </div>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="~/img/logo.png" alt=""></a>
+                        <a asp-controller="Home" asp-action="Index"><img src="~/img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -119,7 +119,7 @@
 
                             <li><a asp-action="about" asp-controller="Home">About Us</a></li>
 
-                            <li><a asp-action="Index" asp-controller="ShoppingCart">Shopping Cart</a></li>
+                            @*<li><a asp-action="Index" asp-controller="ShoppingCart">Shopping Cart</a></li>*@
 
 
 
@@ -158,10 +158,10 @@
     <script src="~/js/main.js"></script>
     <script src="~/js/mainPanel.js"></script>
 
-    <main role="main" >
+    <main role="main">
         @RenderBody()
     </main>
-    <div class="modal" tabindex="-1"  role="dialog" id="form-modal">
+    <div class="modal" tabindex="-1" role="dialog" id="form-modal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -173,7 +173,7 @@
                 <div class="modal-body">
 
                 </div>
-               
+
             </div>
         </div>
     </div>
@@ -187,7 +187,7 @@
                             <a asp-action="Index" asp-controller="Home"><img src="~/img/footer-logo.png" alt=""></a>
                         </div>
                         <p>The customer is at the heart of our unique business model, which includes design.</p>
-                        <a ><img src="~/img/payment.png" ></a>
+                        <a><img src="~/img/payment.png"></a>
                     </div>
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
@@ -197,7 +197,7 @@
                             <li><a asp-controller="Home" asp-action="Shop">Clothing Store</a></li>
                             <li><a asp-controller="Home" asp-action="Shop">Trending Shoes</a></li>
                             <li><a asp-controller="Home" asp-action="Shop">Accessories</a></li>
-                           
+
                         </ul>
                     </div>
                 </div>
@@ -205,10 +205,10 @@
                     <div class="footer__widget">
                         <h6>Shopping</h6>
                         <ul>
-                            <li><a asp-controller="Home" asp-action="AboutUs" >About Us</a></li>
+                            <li><a asp-controller="Home" asp-action="AboutUs">About Us</a></li>
                             <li><a asp-action="Blog" asp-controller="Home">Blog</a></li>
-                          
-                          
+
+
                         </ul>
                     </div>
                 </div>
@@ -217,15 +217,15 @@
                         <h6>NewLetter</h6>
                         <div class="footer__newslatter">
                             <p>Be the first to know about new arrivals, look books, sales & promos!</p>
-                            <form type="Post"asp-action="NewsLetter" asp-controller="Home">
-                                <input  name="Email" type="email" placeholder="Your email">
+                            <form type="Post" asp-action="NewsLetter" asp-controller="Home">
+                                <input name="Email" type="email" placeholder="Your email">
                                 <button type="submit"><span class="icon_mail_alt"></span></button>
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </footer>
 
