--- a/WebApplicationCrud/Views/Blog/Index.cshtml
+++ b/WebApplicationCrud/Views/Blog/Index.cshtml
@@ -40,7 +40,8 @@
                         <a asp-action="Edit" asp-controller="Blog" asp-route-id="@post.Id">Edit</a>
                         <a asp-action="Remove" asp-controller="Blog" asp-route-id="@post.Id">Remove</a>
                     </div>
-                    </div>}
+                    </div>
+                    }
                             </div>
 
                         </div>
