--- a/WebApplicationCrud/Views/Shared/_AdministrationSidebar.cshtml
+++ b/WebApplicationCrud/Views/Shared/_AdministrationSidebar.cshtml
@@ -8,11 +8,11 @@
         </button>
     </div>
  
-    <ul class="list-unstyled components mb-5" clas="p-4 pt-5">
+    <ul id="administrationNavigation" class="list-unstyled components mb-5" clas="p-4 pt-5">
         <li>
             <a asp-action="Index" asp-controller="Panel"><span class="mr-3"></span>Main Page</a>
         </li>
-        <li class="active">
+        <li>
             <a asp-action="AddProductPanel" asp-controller="Panel"><span class="mr-3"></span>Add New Product</a>
         </li>
         <li>
