--- a/WebApplicationCrud/Views/Auth/ForgotPassword.cshtml
+++ b/WebApplicationCrud/Views/Auth/ForgotPassword.cshtml
@@ -1,17 +1,68 @@
 ﻿@model ForgotPasswordViewModel
+    <head>
+        <title>Login V14</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--===============================================================================================-->
+        <link rel="icon" type="image/png" href="~/LoginPage/images/icons/favicon.ico" />
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/vendor/bootstrap/css/bootstrap.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/vendor/animate/animate.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/vendor/css-hamburgers/hamburgers.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/vendor/animsition/css/animsition.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/vendor/select2/select2.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/vendor/daterangepicker/daterangepicker.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/css/util.css">
+        <link rel="stylesheet" type="text/css" href="~/LoginPage/css/main.css">
+        <!--===============================================================================================-->
+    </head>
+    <body>
 
-<h2>Forgot Password</h2>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+
+        <h2>Forgot Password</h2>
+        <hr />
+        <div class="row">
+           
+            <div  class="col-md-12 ">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <label asp-for="Email"></label>
+                    <div class="wrap-input100 validate-input m-b-36">
+
+                        <input class="input100" asp-for="Email" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-dark">Submit</button>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-</div>
+        </div>
+
+
+    </body>
+    
+    <!--===============================================================================================-->
+    <script src="~/LoginPage/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/LoginPage/vendor/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/LoginPage/vendor/bootstrap/js/popper.js"></script>
+    <script src="~/LoginPage/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/LoginPage/vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/LoginPage/vendor/daterangepicker/moment.min.js"></script>
+    <script src="~/LoginPage/vendor/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/LoginPage/vendor/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/LoginPage/js/main.js"></script>
