--- a/WebApplicationCrud/wwwroot/css/style.css
+++ b/WebApplicationCrud/wwwroot/css/style.css
@@ -133,6 +133,11 @@ ol {
 	margin-bottom: 15px;
 	display: block;
 }
+.centered{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
 
 .section-title h2 {
 	color: #111111;
@@ -2114,6 +2119,9 @@ ol {
 .footer {
 	background: #111111;
 	padding-top: 70px;
+	position: relative;
+	bottom: 0;
+	
 }
 
 .footer__about {
